--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cohere-ai": "^7.7.5",
     "dotenv": "^16.4.5",
     "openai": "^4.28.0",
     "react": "^18.2.0",
